@@ -1,11 +1,5 @@
-DIST gentoo-ru-0.16.gz 48991 RMD160 c3f3d0cb948e4a3c335bbaf7df21d6a31b52c164 SHA1 638e8086ad2362446454f56af52213159b56a925 SHA256 f1aac2ed4a0e1dc5208b188675234c2b425686998c6ede6adfbd8855c316e47d
-DIST gentoo-ru-0.17.gz 51189 RMD160 710e8cf332e7a3982abeb4c1a60d5d861e262943 SHA1 26f9a76c228696a98be02ae8ffb09a0056af388c SHA256 129e05d43999f1713ac3e024b2eb752e4e678853cb03e28c20cdfbc8786edb2b
-DIST gentoo-ru-0.18.gz 54368 RMD160 592a2bae0ea5def751983bb0ae236ae839ffa5f3 SHA1 69e0cc5232e29ad0a09023a2621aa07285c16925 SHA256 383463a96abf20dcefacac527ce209795c6f445d93bff3d031383c9b13b61f6a
 DIST gentoo-ru-0.19.gz 57406 RMD160 c68f38922bf619983a37fbb5893f11a60406e6e7 SHA1 d6f3d403b4471d0a5adc84ec244ae4eaaf275e3d SHA256 6014e32837e71c17705073c156f6f7cc927834f20248eec41914659b14e68f30
-EBUILD fortune-mod-gentoo-ru-0.16.ebuild 776 RMD160 4b14d48600c645c71301409538d4b8f27b3efbe6 SHA1 ade50495bd31ce4963a333efd3708e141a1416c7 SHA256 0e9dd967f978ff546bdba8706eeba4f01a0395279f86611cd27790ce55a62f5f
-EBUILD fortune-mod-gentoo-ru-0.17.ebuild 776 RMD160 4b14d48600c645c71301409538d4b8f27b3efbe6 SHA1 ade50495bd31ce4963a333efd3708e141a1416c7 SHA256 0e9dd967f978ff546bdba8706eeba4f01a0395279f86611cd27790ce55a62f5f
-EBUILD fortune-mod-gentoo-ru-0.18.ebuild 776 RMD160 4b14d48600c645c71301409538d4b8f27b3efbe6 SHA1 ade50495bd31ce4963a333efd3708e141a1416c7 SHA256 0e9dd967f978ff546bdba8706eeba4f01a0395279f86611cd27790ce55a62f5f
 EBUILD fortune-mod-gentoo-ru-0.19.ebuild 776 RMD160 4b14d48600c645c71301409538d4b8f27b3efbe6 SHA1 ade50495bd31ce4963a333efd3708e141a1416c7 SHA256 0e9dd967f978ff546bdba8706eeba4f01a0395279f86611cd27790ce55a62f5f
 EBUILD fortune-mod-gentoo-ru-9999.ebuild 637 RMD160 45bc00345eb1454a4092370d5b5818d13c4288eb SHA1 cbb8f3f113f14ee05186ea8c1f01c5b336e0817a SHA256 d29f3a08b1967811abacdf7b390da8863eee2f3d19570b5b21068d753554b099
-MISC ChangeLog 3271 RMD160 8cfb12fc3e1c3b970dc01050632e1c2504ce09a1 SHA1 ff7ce7f7a45573d4504c05d1445014dd374a4a9b SHA256 2707d74677345cbe098bf9721a6fbe225bdb4639d2aee00ab0d8330b1ad3eba8
+MISC ChangeLog 3448 RMD160 c9cc560b41f21af522b0ba1003109f4423736cbf SHA1 cb026930861791d650420763bf98e7b3fdf75bbc SHA256 4f5db686b9343f3cc7d53430c73155578e89aaf146ed0028be077c60ba3b9380
 MISC metadata.xml 478 RMD160 23c855181d5b354257112cc8949ec7d82f17f96b SHA1 7ef293d63d616ab9990a1bec36c57556791a3292 SHA256 684e2a5b887e7c708245d69e673022d7fff5bc786f6b14116d386fc42a257272
